--- a/mini_project_upn_zetta_team_L/package.json
+++ b/mini_project_upn_zetta_team_L/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "apollo-angular": "^4.1.1",
     "rxjs": "~7.5.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
